<resources>
    <string name="app_name">YATL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_todo_list">To-do list</string>
    <string name="nav_statistics">Statistics</string>
    <string name="app_menu_filter">Filter</string>
    <string name="app_menu_clear_completed">Clear completed</string>
    <string name="app_menu_refresh">Refresh</string>
    <string name="et_add_task_title">Title</string>
    <string name="et_add_task_body">Body</string>
    <string name="app_menu_search">Search</string>
    <string name="app_menu_clear_all">Clear all</string>
</resources>
