<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/nav_bar"-->
        <!--android:icon="@drawable/ic_menu_white_24dp"-->
        <!--app:showAsAction="always|withText"-->
        <!--android:title="nav_bar"-->
        <!--android:orderInCategory="20"-->
        <!--/>-->

    <item
        android:id="@+id/app_menu_fragment_tasks_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/app_menu_filter"
        />

    <item
        android:id="@+id/app_menu_fragment_tasks_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/app_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:id="@+id/app_menu_fragment_tasks_clear_completed"
        app:showAsAction="never"
        android:title="@string/app_menu_clear_completed"
        />

    <item
        android:id="@+id/app_menu_fragment_tasks_clear_all"
        app:showAsAction="never"
        android:title="@string/app_menu_clear_all"
        />

    <item
        android:id="@+id/app_menu_fragment_tasks_refresh"
        app:showAsAction="never"
        android:title="@string/app_menu_refresh"
        />


</menu>